--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <header>
+    <header> 
         <div class="container">
             <h1 class="logo">IPCA<span>Biblioteca</span></h1>
 
@@ -93,6 +93,49 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="script.js"></script>
-</body>
+
+    <footer>
+
+    <div class="conteudo">
+
+        <div class="box">
+
+            <h2> Localização </h2>
+            <p class="texto"> Campus do IPCA-Barcelos         </p> 
+            <p>Vila Frescainha S.Martinho</p>
+             <p>4750-810 Barcelos</p>
+             <p>Pólo de Braga</p>
+             <p>Edificio Idite Minho</p>
+             <p>Av. Dr. Francisco Pires Gonçalves</p>
+             <p> 4710-911 Braga</p>
+             <p> Polo de guimarães</p>
+             <p> Avepark- Zona industrial de Gandra</p>
+             <p> S.Cláudio de Barco</p>
+            <p> 4806-909 Caldas das Taipas</p>
+
+        </div>
+
+
+
+        <div class="box">
+
+            <h2>Contactos </h2>
+            <p class="texto">E-mail: biblioteca@ipca.pt 
+            </p> <p>Telefone: 253 80 25 25
+            </p>
+            <img class="imagem" src='IPCA-Logo_rgb_v2.png' />
+
+        </div>
+
+<div class="box">
+            <img class="mapa" src='mapa.png' />
+ </div>
+    </div>
+    
+    <h3> Copyright IPCA - Instituto Politécnico do Cávado e do Ave </h3>
+
+</footer>
+    
+    </body>
 
 </html>
