--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <p class="texto">E-mail: biblioteca@ipca.pt 
             </p> <p>Telefone: 253 80 25 25
             </p>
-            <img class="imagem" src='IPCA-Logo_rgb_v2.png' />
+            <img class="imagemipca" src='IPCA-Logo_rgb_v2.png' />
 
         </div>
 
