--- a/about.html
+++ b/about.html
@@ -87,24 +87,23 @@
             </form>
         </div>
 
-      <footer>
+        <footer>
 
         <div class="conteudo">
 
             <div class="box">
-
                 <h2> Localização </h2>
-                <p class="texto"> Campus do IPCA-Barcelos </p>
-                <p>Vila Frescainha S.Martinho</p>
-                <p>4750-810 Barcelos</p>
-                <p>Pólo de Braga</p>
-                <p>Edificio Idite Minho</p>
-                <p>Av. Dr. Francisco Pires Gonçalves</p>
-                <p> 4710-911 Braga</p>
-                <p> Polo de guimarães</p>
-                <p> Avepark- Zona industrial de Gandra</p>
-                <p> S.Cláudio de Barco</p>
-                <p> 4806-909 Caldas das Taipas</p>
+                <div>
+                    <p>Campus do IPCA <br/> Vila Frescainha S.Martinho<br/> 4750-810 Barcelos</div>
+
+                <div><p>Pólo de Braga<br/>
+                Edificio Idite Minho<br/>Av. Dr. Francisco Pires Gonçalves<br/>
+                4710-911 Braga</p></div>
+                
+                
+                <div><p>Polo de Guimarães<br/>Avepark- Zona industrial de Gandra<br/>
+                S.Cláudio de Barco
+                <br/>4806-909 Caldas das Taipas</p></div>
 
             </div>
 
