--- a/index.html
+++ b/index.html
@@ -112,24 +112,23 @@
         </div>
 
 
-    <footer>
+   <footer>
 
         <div class="conteudo">
 
             <div class="box">
-
                 <h2> Localização </h2>
-                <p class="texto"> Campus do IPCA-Barcelos </p>
-                <p>Vila Frescainha S.Martinho</p>
-                <p>4750-810 Barcelos</p>
-                <p>Pólo de Braga</p>
-                <p>Edificio Idite Minho</p>
-                <p>Av. Dr. Francisco Pires Gonçalves</p>
-                <p> 4710-911 Braga</p>
-                <p> Polo de guimarães</p>
-                <p> Avepark- Zona industrial de Gandra</p>
-                <p> S.Cláudio de Barco</p>
-                <p> 4806-909 Caldas das Taipas</p>
+                <div>
+                    <p>Campus do IPCA <br/> Vila Frescainha S.Martinho<br/> 4750-810 Barcelos</div>
+
+                <div><p>Pólo de Braga<br/>
+                Edificio Idite Minho<br/>Av. Dr. Francisco Pires Gonçalves<br/>
+                4710-911 Braga</p></div>
+                
+                
+                <div><p>Polo de Guimarães<br/>Avepark- Zona industrial de Gandra<br/>
+                S.Cláudio de Barco
+                <br/>4806-909 Caldas das Taipas</p></div>
 
             </div>
 
@@ -154,7 +153,6 @@
         <h3> Copyright IPCA - Instituto Politécnico do Cávado e do Ave </h3>
 
     </footer>
-
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="script.js"></script>
 </body>
