--- a/acesso.html
+++ b/acesso.html
@@ -28,7 +28,7 @@
                         <a href="#">Catálogo</a>
                         <ul class="sub-menu2 sub-menu">
                             <li class="categories"><a href="#">Base de Dados</a></li>
-                            <li class="categories"><a href="#">Acesso Livre</a></li>
+                            <li class="categories"><a href="acesso.html">Acesso Livre</a></li>
                             <li class="categories"><a href="#">Documentos Internos</a></li>
                         </ul>
                     </li>
