--- a/acesso.html
+++ b/acesso.html
@@ -12,7 +12,8 @@
 
     <header>
         <div class="container">
-            <h1 class="logo">IPCA<span>Biblioteca</span></h1>
+              <a href="index.html"> <h1 class="logo">IPCA<span>Biblioteca</span></h1></a>
+
 
             <nav class="nav">
                 <ul id="dropdown" class="menu">
