--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header>
         <div class="container">
-            <h1 class="logo">IPCA<span>Biblioteca</span></h1>
+             <a href="index.html"> <h1 class="logo">IPCA<span>Biblioteca</span></h1></a>
 
             <nav class="nav">
                 <ul id="dropdown">
