--- a/acesso.html
+++ b/acesso.html
@@ -94,22 +94,22 @@
         </li>
     </div>
 
-    <footer>
+     <footer>
 
         <div class="conteudo">
 
             <div class="box">
                 <h2> Localização </h2>
                 <div>
-                    <p>Campus do IPCA <br/> Vila Frescainha S.Martinho<br/> 4750-810 Barcelos</div>
+                    <p>Campus do IPCA <br/>Vila Frescaínha S. Martinho<br/> 4750-810 Barcelos</div>
 
                 <div><p>Pólo de Braga<br/>
-                Edificio Idite Minho<br/>Av. Dr. Francisco Pires Gonçalves<br/>
+                Edifício Idite Minho<br/>Av. Dr. Francisco Pires Gonçalves<br/>
                 4710-911 Braga</p></div>
                 
                 
-                <div><p>Polo de Guimarães<br/>Avepark- Zona industrial de Gandra<br/>
-                S.Cláudio de Barco
+                <div><p>Pólo de Guimarães<br/>Avepark- Zona Industrial de Gandra<br/>
+                S. Cláudio de Barco
                 <br/>4806-909 Caldas das Taipas</p></div>
 
             </div>
@@ -118,7 +118,7 @@
 
             <div class="box">
 
-                <h2>Contactos </h2>
+                <h2>Contactos</h2>
                 <p class="texto">E-mail: biblioteca@ipca.pt
                 </p>
                 <p>Telefone: 253 80 25 25
