--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
 <head>
     <meta charset="utf-8">
     <title>IPCA Biblioteca</title>
+
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 
 <body>
 
     <header>
         <div class="container">
-             <a href="index.html"> <h1 class="logo">IPCA<span>Biblioteca</span></h1></a>
+            <a href="index.html">
+                <h1 class="logo">IPCA<span>Biblioteca</span></h1>
+            </a>
 
             <nav class="nav">
                 <ul id="dropdown">
@@ -44,116 +48,96 @@
             <div class="menu-toggle">
                 <div class="hamburger"></div>
             </div>
-        </div>    
+        </div>
     </header>
-  <!-- menu termina aqui -->
-   
+    <!-- menu termina aqui -->
+    <div class="parallax"></div>
     <!-- quote + mini menu -->
-    <article>
-        <div class="imagem">
-            <div id="quote">
-                <p>"Find a way to fit in tiny box grab pompom in mouth and put in water" </p>
-            </div>
-
-        </div>
 
 
-        <div class="minimenu">
-            <li class="mini">
-                <div> <img src="img/sobre.svg" width="
-160px"> </div>
-                <div class="sobre">
+    <div class="minimenu">
+        <li class="mini">
+            <div> <img src="img/sobre.svg"> </div>
+            <div class="sobre">
+                <a href="about.html">
                     <p>Sobre</p>
-                </div>
-            </li>
-            <li class="mini">
-                <div> <img src="img/basededados.svg" width="160px"></div>
-                <div>
-                    <p> Base de Dados </p>
-                </div>
-            </li>
+                </a>
+            </div>
+        </li>
+        <li class="mini">
+            <div> <img src="img/basededados.svg"></div>
+            <div>
+                <a href="acesso.html">
+                    <p>Acesso Livre</p>
+                </a>
+            </div>
+        </li>
+        <li class="mini">
+            <div> <img src="img/comorequesitar.svg"></div>
+            <div>
+                <p>Como Requesitar </p>
+            </div>
+        </li>
 
-            <li class="mini">
-                <div> <img src="img/comorequesitar.svg" width="160px"></div>
-                <div>
-                    <p>Como Requesitar </p>
-                </div>
-            </li>
 
-
-        </div>
-
-    </article>
-    <!-- FIM parte quote + mini menu-->
+    </div>
 
 
     <div class="block">
-            <div class="contact"><h2>Sugestões e Reclamações</h2>
+        <div class="contact">
+            <h2>Sugestões e Reclamações</h2>
             <p><i>A sua opinião é importante para nós.</i><br/><br/> Contribuirá para melhorar a qualidade do serviço prestado. Utilize esta ferramenta caso pretenda deixar uma sugestão, reclamação, expor uma ideia e/ou iniciativas que gostaria de ver concretizadas.<br/><br/> A Biblioteca aceita sugestões para a aquisição de publicações. Essas sugestões serão analisadas, tendo em conta o respetivo interesse científico e das disciplinas lecionadas no IPCA.
                 <br/><br/> Obrigado pelo contributo.</p> <br/><br/></div>
-            <form>
-                <p>
-                    <label>Nome</label>
-                    <input type="text" name="firstName" class="left">
-                </p>
-                <p>
-                    <label>E-mail</label>
-                    <input type="email" name="email" class="left">
-                </p>
-                <p>
-                    <label>Mensagem</label>
-                    <textarea></textarea>
-                </p>
-                <br/>
-                <p class="submit-btn">
-                    <button>Enviar</button>
-                </p>
-            </form>
-        </div>
+        <form>
+            <p>
+                <label>Nome</label>
+                <input type="text" name="firstName" class="left">
+            </p>
+            <p>
+                <label>E-mail</label>
+                <input type="email" name="email" class="left">
+            </p>
+            <p>
+                <label>Mensagem</label>
+                <textarea></textarea>
+            </p>
+            <br/>
+            <p class="submit-btn">
+                <button>Enviar</button>
+            </p>
+        </form>
+    </div>
 
 
-  <footer>
-
+    <footer>
         <div class="conteudo">
-
             <div class="box">
                 <h2> Localização </h2>
                 <div>
                     <p>Campus do IPCA <br/>Vila Frescaínha S. Martinho<br/> 4750-810 Barcelos</div>
-
-                <div><p>Pólo de Braga<br/>
-                Edifício Idite Minho<br/>Av. Dr. Francisco Pires Gonçalves<br/>
-                4710-911 Braga</p></div>
-                
-                
-                <div><p>Pólo de Guimarães<br/>Avepark- Zona Industrial de Gandra<br/>
-                S. Cláudio de Barco
-                <br/>4806-909 Caldas das Taipas</p></div>
-
+                <div>
+                    <p>Pólo de Braga<br/> Edifício Idite Minho<br/>Av. Dr. Francisco Pires Gonçalves<br/> 4710-911 Braga</p>
+                </div>
+                <div>
+                    <p>Pólo de Guimarães<br/>Avepark- Zona Industrial de Gandra<br/> S. Cláudio de Barco
+                        <br/>4806-909 Caldas das Taipas</p>
+                </div>
             </div>
-
-
-
             <div class="box">
-
                 <h2>Contactos</h2>
                 <p class="texto">E-mail: biblioteca@ipca.pt
                 </p>
                 <p>Telefone: 253 80 25 25
                 </p>
-                <img class="imagemipca" src='img/IPCA-Logo_rgb_v2.png' />
-
+                <a href="http://ipca.pt/" target="_blank"><img src='img/IPCA-Logo_rgb_v2.png' /></a>
             </div>
-
             <div class="box">
                 <img class="mapa" src='img/mapa.png' />
             </div>
         </div>
-
         <h3> Copyright IPCA - Instituto Politécnico do Cávado e do Ave </h3>
-
     </footer>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="script.js"></script>
 </body>
 
